refactor: convert 15 target data carriers to records